--- a/cn/core/aboutMod.html
+++ b/cn/core/aboutMod.html
@@ -90,7 +90,7 @@
                 <h2>开发团队</h2>
                 <ul>
                     <li><strong>HoCha113:</strong> 模组的创始人和拥有者 代码编写人员</li>
-                    <li><strong>雾梯V:</strong> 模组画师</li>
+                    <li><strong>雾梯V:</strong> 模组画师 内容艺术设计</li>
                     <li><strong>Monomon:</strong> 本地化校验 游戏文本核对与后期测试负责</li>
                 </ul>
             </div>
