--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -1751,13 +1751,13 @@
                     <p>雄伟之护</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Ataraxia.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Ataraxia.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Ataraxia.png" alt="Ataraxia">
                     </div>
 
                     <p>禅心剑</p>
-                </div>
+                </div> -->
 
                 <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Lucrecia.html'">
                     <div class="image-container">
