--- a/cn/weapon/AngelicShotgun.html
+++ b/cn/weapon/AngelicShotgun.html
@@ -49,17 +49,17 @@
             <img src="AngelicShotgun.png" alt="AngelicShotgun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Angelic_Shotgun">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/RemakeItems/Ranged/RAngelicShotgun.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">圣天耀火炮</h1>
             <img src="AngelicShotgun.png" alt="AngelicShotgun">
-            <p class="item-id">内部名: 圣天耀火炮</p>
+            <p class="item-id">内部名: AngelicShotgun</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
             <p class="item-knockback">击退: 0</p>
