--- a/cn/weapon/Animosity.html
+++ b/cn/weapon/Animosity.html
@@ -49,17 +49,17 @@
             <img src="Animosity.png" alt="Animosity" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Animosity">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Ranged/HeldProjs/AnimosityHeldProj.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">憎恨</h1>
             <img src="Animosity.png" alt="Animosity">
-            <p class="item-id">内部名: 憎恨</p>
+            <p class="item-id">内部名: Animosity</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
             <p class="item-knockback">击退: 0</p>
