--- a/cn/weapon/AnnihilatingUniverse.html
+++ b/cn/weapon/AnnihilatingUniverse.html
@@ -55,10 +55,7 @@
             </p>
             <p class="extra-tip">——“肝，也是一种获取力量的手段（怎么神吞还不给我死亡之风）”</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Ranged/AnnihilatingUniverse.cs">查看代码实现</a>
             </button>
         </main>
 
