--- a/cn/weapon/AntiMaterielRifle.html
+++ b/cn/weapon/AntiMaterielRifle.html
@@ -51,14 +51,14 @@
                 <a href="https://calamitymod.wiki.gg/wiki/Anti-materiel_Rifle">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Ranged/HeldProjs/AntiMaterielRifleHeldProj.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">巴雷特</h1>
             <img src="AntiMaterielRifle.png" alt="AntiMaterielRifle">
-            <p class="item-id">内部名: 巴雷特</p>
+            <p class="item-id">内部名: AntiMaterielRifle</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 1060</p>
             <p class="item-knockback">击退: 9</p>
