--- a/cn/weapon/BlossomFlux.html
+++ b/cn/weapon/BlossomFlux.html
@@ -52,7 +52,7 @@
                 <a href="https://calamitymod.wiki.gg/wiki/Blossom_Flux">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Ranged/HeldProjs/BlossomFluxHeldProj.cs">查看代码实现</a>
             </button>
         </main>
 
