--- a/cn/weapon/BurntSienna.html
+++ b/cn/weapon/BurntSienna.html
@@ -49,7 +49,7 @@
                 <a href="https://calamitymod.wiki.gg/wiki/Burnt_Sienna">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Melee/HeldProjectiles/BurntSiennaHeld.cs">查看代码实现</a>
             </button>
         </main>
 
