--- a/cn/weapon/UnderTheSand.html
+++ b/cn/weapon/UnderTheSand.html
@@ -47,10 +47,7 @@
             <img src="UnderTheSand.gif" alt="UnderTheSand" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Magic/UnderTheSand.cs">查看代码实现</a>
             </button>
         </main>
 
