--- a/cn/weapon/AbsoluteZero.html
+++ b/cn/weapon/AbsoluteZero.html
@@ -50,7 +50,7 @@
                 <a href="https://calamitymod.wiki.gg/wiki/Absolute_Zero">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/RemakeItems/Melee/RAbsoluteZero.cs">查看代码实现</a>
             </button>
         </main>
 
