--- a/cn/weapon/AcesHigh.html
+++ b/cn/weapon/AcesHigh.html
@@ -49,10 +49,10 @@
             <img src="AcesHigh.png" alt="AcesHigh" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Ace%27s_High">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/RemakeItems/Ranged/RAcesHigh.cs">查看代码实现</a>
             </button>
         </main>
 
