--- a/cn/weapon/AethersWhisper.html
+++ b/cn/weapon/AethersWhisper.html
@@ -49,10 +49,10 @@
             <img src="AethersWhisper.png" alt="AethersWhisper" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Aether%27s_Whisper">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Magic/HeldProjs/AethersWhisperHeldProj.cs">查看代码实现</a>
             </button>
         </main>
 
