--- a/cn/weapon/Alluvion.html
+++ b/cn/weapon/Alluvion.html
@@ -53,7 +53,7 @@
                 <a href="https://calamitymod.wiki.gg/wiki/Alluvion">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/RemakeItems/Ranged/RAlluvion.cs">查看代码实现</a>
             </button>
         </main>
 
