--- a/cn/weapon/ArterialAssault.html
+++ b/cn/weapon/ArterialAssault.html
@@ -49,10 +49,10 @@
             <img src="ArterialAssault.png" alt="ArterialAssault" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Arterial_Assault">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Ranged/HeldProjs/ArterialAssaultHeldProj.cs">查看代码实现</a>
             </button>
         </main>
 
