--- a/cn/weapon/AvalancheM60.html
+++ b/cn/weapon/AvalancheM60.html
@@ -48,10 +48,7 @@
             <img src="AvalancheM60.gif" alt="AvalancheM60" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Projectiles/Weapons/Ranged/HeldProjs/AvalancheM60HeldProj.cs">查看代码实现</a>
             </button>
         </main>
 
