--- a/cn/weapon/BlightedCleaver.html
+++ b/cn/weapon/BlightedCleaver.html
@@ -51,7 +51,7 @@
                 <a href="https://calamitymod.wiki.gg/wiki/Blighted_Cleaver">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/RemakeItems/Melee/RBlightedCleaver.cs">查看代码实现</a>
             </button>
         </main>
 
