--- a/cn/weapon/CatastropheClaymore.html
+++ b/cn/weapon/CatastropheClaymore.html
@@ -49,10 +49,10 @@
             <img src="CatastropheClaymore.png" alt="CatastropheClaymore" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Catastrophe_Claymore">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/RemakeItems/Melee/RCatastropheClaymore.cs">查看代码实现</a>
             </button>
         </main>
 
