--- a/cn/weapon/DarkFrostSolstice.html
+++ b/cn/weapon/DarkFrostSolstice.html
@@ -50,10 +50,7 @@
             <img src="DarkFrostSolstice.gif" alt="DarkFrostSolstice" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Ranged/DarkFrostSolstice.cs">查看代码实现</a>
             </button>
         </main>
 
