--- a/cn/weapon/ElementWhip.html
+++ b/cn/weapon/ElementWhip.html
@@ -46,16 +46,13 @@
             <img src="ElementWhip.gif" alt="ElementWhip" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Summon/ElementWhip.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
             <h1 class="img-Item-Title">元素长鞭</h1>
-            <img src="ElementWhip.png" alt="M1">
+            <img src="ElementWhip.png" alt="ElementWhip">
             <p class="item-id">内部名: ElementWhip</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 192</p>
