--- a/cn/weapon/MG42.html
+++ b/cn/weapon/MG42.html
@@ -49,10 +49,7 @@
             <img src="MG42.gif" alt="MG42" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Ranged/MG42.cs">查看代码实现</a>
             </button>
         </main>
 
