--- a/cn/weapon/NeutronScythe.html
+++ b/cn/weapon/NeutronScythe.html
@@ -52,10 +52,7 @@
             <img src="NeutronScythewiki.gif" alt="NeutronScythe" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Rogue/NeutronScythe.cs">查看代码实现</a>
             </button>
         </main>
 
