--- a/cn/weapon/SandDagger.html
+++ b/cn/weapon/SandDagger.html
@@ -44,15 +44,12 @@
                 匕首会嵌入沙块，使其短暂延时后爆炸，并爆出两道沙球<br>
                 潜伏攻击投掷强化匕首，可无限穿透目标<br>
                 潜伏攻击的匕首在沙地上会更快地爆炸<br>
-                它的最佳前缀是<a href=""https://calamitymod.wiki.gg/wiki/Modifiers"" class="clickable-word">化境</a>
+                它的最佳前缀是<a href="https://calamitymod.wiki.gg/wiki/Modifiers" class="clickable-word">化境</a>
             </p>
             <img src="SandDagger.gif" alt="SandDagger" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Rogue/SandDagger.cs">查看代码实现</a>
             </button>
         </main>
 
