--- a/cn/weapon/SeasonalKunai.html
+++ b/cn/weapon/SeasonalKunai.html
@@ -48,10 +48,7 @@
             <img src="SeasonalKunai.gif" alt="SeasonalKunai" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Rogue/SeasonalKunai.cs">查看代码实现</a>
             </button>
         </main>
 
