--- a/cn/weapon/SnowQuay.html
+++ b/cn/weapon/SnowQuay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>示例武器介绍模板-灾厄大修Wiki</title>
+    <title>雪蝰-灾厄大修Wiki</title>
     <link rel="icon" href="/asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -47,17 +47,14 @@
             <img src="SnowQuay.gif" alt="SnowQuay" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Ranged/SnowQuay.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">示例武器介绍模板</h1>
+            <h1 class="img-Item-Title">雪蝰</h1>
             <img src="SnowQuay.png" alt="SnowQuay">
-            <p class="item-id">内部名: 示例武器介绍模板</p>
+            <p class="item-id">内部名: SnowQuay</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 22</p>
             <p class="item-knockback">击退: 4</p>
