--- a/cn/weapon/SnowQuayMK2.html
+++ b/cn/weapon/SnowQuayMK2.html
@@ -48,10 +48,7 @@
             <img src="SnowQuayMK2.gif" alt="SnowQuayMK2" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Ranged/SnowQuayMK2.cs">查看代码实现</a>
             </button>
         </main>
 
