--- a/cn/weapon/Snowblindness.html
+++ b/cn/weapon/Snowblindness.html
@@ -50,10 +50,7 @@
             <img src="Snowblindness.gif" alt="Snowblindness" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Ranged/Snowblindness.cs">查看代码实现</a>
             </button>
         </main>
 
