--- a/cn/weapon/WeaverGrievances.html
+++ b/cn/weapon/WeaverGrievances.html
@@ -51,10 +51,7 @@
             <img src="WeaverGrievances.gif" alt="WeaverGrievances" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/WeaverGrievances.cs">查看代码实现</a>
             </button>
         </main>
 
