--- a/cn/weapon/AnarchyBlade.html
+++ b/cn/weapon/AnarchyBlade.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>混乱之刃</h1>
             <p> 
-                混乱之刃是一把困难模式下的阔剑类武器，由材料合成<br>
+                混乱之刃是一把困难模式下的阔剑类武器，是破坏者巨剑的上位合成<br>
                 它每挥舞三次会发射一颗硫火爆弹，可以多次穿透敌人，在飞行轨迹末端会制造多个小型的硫磺火爆炸<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
