--- a/cn/weapon/AstralBlade.html
+++ b/cn/weapon/AstralBlade.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>幻星刃</h1>
             <p> 
-                幻星刃是一把困难模式下的阔剑类武器，掉落自星神游龙，也可以由材料合成<br>
+                幻星刃是一把困难模式下的阔剑类武器，由八个炫星锭在远古操纵机处合成<br>
                 它会发射弹道笔直的幻星之球，击中敌人后产生一次星尘爆破，敌人的剩余血量越高，造成的实际伤害越高<br>
                 真近战如果打出暴击，会在屏幕的四个方向生成超级星星打击敌人<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
