--- a/cn/weapon/AstralPike.html
+++ b/cn/weapon/AstralPike.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>幻星矛</h1>
             <p> 
-                幻星矛是一把困难模式下的长枪类武器，掉落星神游龙，或者由材料制作<br>
+                幻星矛是一把困难模式下的长枪类武器，由八个炫星锭在远古操纵机处合成<br>
                 它的攻击循环由两次旋枪动作和一次捅刺动作组成，捅刺动作会发射三颗幻星<br>
                 而旋枪动作真近战命中敌人后会生成超级星星打击敌人<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
