--- a/cn/weapon/BalefulHarvester.html
+++ b/cn/weapon/BalefulHarvester.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>邪恶收割者</h1>
             <p> 
-                邪恶收割者是一把困难模式下的镰刀类武器，由材料合成<br>
+                邪恶收割者是一把困难模式下的镰刀类武器，是无头骑士之刃的上位合成<br>
                 左键使用，会发射两个祛恶镰刀，在飞行过程快速减速，一小段时间后会追踪周围的目标<br>
                 右键使用可以蓄力旋转镰刀，松开右键后掷出，镰刀会在空中快速变大，落地后引起一场小型地震<br>
                 右键的投掷行为会将武器从玩家背包中移出，回收镰刀可以拿回武器<br>
