--- a/cn/weapon/Brimlash.html
+++ b/cn/weapon/Brimlash.html
@@ -39,7 +39,8 @@
         <main class="main-content">
             <h1>硫火鞭</h1>
             <p> 
-                硫火鞭是一把困难模式下的阔剑类武器，由材料合成<br>
+                硫火鞭是一把困难模式下的阔剑类武器，由十二个灾厄尘和四个污痕核心在山铜砧/秘银砧处合成<br>
+                右键发射的硫火剑气会追踪敌人<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="Brimlash.gif" alt="Brimlash" class="pwertGIF" loading="lazy">
