--- a/cn/weapon/BrimstoneSword.html
+++ b/cn/weapon/BrimstoneSword.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>硫火短剑</h1>
             <p> 
-                硫火短剑是一把困难模式下的短剑类武器，由材料合成<br>
+                硫火短剑是一把困难模式下的短剑类武器，由六个污痕核心在山铜砧/秘银砧合成<br>
                 它会发射一个高速移动的硫磺火剑刃，命中敌人后制造一场小型的硫磺火爆炸<br>
                 真近战会向天空抛射大量硫磺火球<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
@@ -59,9 +59,9 @@
             <img src="BrimstoneSword.png" alt="BrimstoneSword">
             <p class="item-id">内部名: BrimstoneSword</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 70</p>
+            <p class="item-knockback">击退: 7.5</p>
+            <p class="item-usetimer">使用时间: 28</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 一把炽热的短剑<br>
