--- a/cn/weapon/Orderbringer.html
+++ b/cn/weapon/Orderbringer.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1> 携序之刃</h1>
             <p> 
-                携序之刃是一把月球领主后的阔剑类武器，由材料合成<br>
+                携序之刃是一把月球领主后的阔剑类武器，由制裁大剑与二十个恒温能量和八个宇宙锭在星宇砧升级而来<br>
                 它会发射多个追踪敌人的彩虹棱晶能量<br>
                 连续击打同一个敌人后会召唤一个巨大的剑灵<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
