--- a/cn/weapon/PhosphorescentGauntlet.html
+++ b/cn/weapon/PhosphorescentGauntlet.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>磷光拳套</h1>
             <p> 
-                磷光拳套是一把月球领主后的近战武器，掉落自硫海遗爵<br>
+                磷光拳套是一把月球领主后的近战武器，掉落自辐核骇兽<br>
                 左键使用会发射磷光拳头，击中敌人后会生成六个次级拳头造成二次伤害<br>
                 衍生的次级拳头会锁定打击生成时的目标<br>
                 当一个敌人被磷光拳头连续击中10次后，会有两个巨大的拳头从屏幕两侧飞入撞击目标<br>
@@ -61,9 +61,9 @@
             <img src="PhosphorescentGauntlet.png" alt="PhosphorescentGauntlet">
             <p class="item-id">内部名: PhosphorescentGauntlet</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 1205</p>
+            <p class="item-knockback">击退: 9</p>
+            <p class="item-usetimer">使用时间: 40</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 以拳之意志打击敌人<br>
