--- a/cn/weapon/TheLastMourning.html
+++ b/cn/weapon/TheLastMourning.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>末晓之殇</h1>
             <p> 
-                末晓之殇是一把月球领主后的阔剑类武器，由材料合成<br>
+                末晓之殇是一把月球领主后的阔剑类武器，是邪恶收割者的上位升级武器<br>
                 左键使用会发射追踪敌人的罪亡颅骨，命中敌人后会分裂为几团火球<br>
                 右键使用会让刀刃增大至原来的1.5倍，并失去远程剑气的攻击手段，真近战命中敌人后会在周围召唤怨灵颅骨来追杀目标<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
