--- a/cn/weapon/VulcaniteLance.html
+++ b/cn/weapon/VulcaniteLance.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>火山长矛</h1>
             <p> 
-                火山长矛是一把困难模式下的长枪类武器，由材料合成<br>
+                火山长矛是一把困难模式下的长枪类武器，是硫磺火矛的上位合成<br>
                 它的捅刺攻击会喷射混沌火焰，给予接触到的敌人硫磺火减益<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
@@ -63,9 +63,7 @@
             <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “我们需要更多的汽油”
             </p>
         </div>        
     </div>
