--- a/cn/weapon/HandGun.html
+++ b/cn/weapon/HandGun.html
@@ -39,15 +39,15 @@
         <main class="main-content">
             <h1>手枪</h1>
             <p> 
-                手枪是一把困难模式前的枪类武器，掉落.....<br>
-                更多具体描述...<br>
+                手枪是一把困难模式前的枪类武器，击败骷髅王后，从地牢的金锁箱里获得。<br>
+                左键发射子弹。<br>
                 
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="HandGun.png" alt="HandGun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://terraria.wiki.gg/wiki/Handgun?rdfrom=https%3A%2F%2Fcalamitymod.wiki.gg%2Fwiki%2FHandgun%3Fredirect%3Dno">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -59,9 +59,9 @@
             <img src="HandGun.png" alt="HandGun">
             <p class="item-id">内部名: HandGun</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 20</p>
+            <p class="item-knockback">击退: 3</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 这里是物品在游戏中的描述<br>
