--- a/cn/weapon/StellarStriker.html
+++ b/cn/weapon/StellarStriker.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>月炎之锋</h1>
             <p> 
-                月炎之锋是一把月球领主后的阔剑类武器，由材料合成<br>
+                月炎之锋是一把月球领主后的阔剑类武器，是陨星刃的上位升级武器<br>
                 左键使用会发射残月射线，命中敌人后会在周围生成六个月炎爆炸<br>
                 右键使用会让刀刃增大至原来的1.5倍，并失去远程剑气的攻击手段，真近战命中敌人后会在周围生成六道残月斩切<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
