--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -252,7 +252,7 @@
                         <img src="/cn/weapon/WeaverGrievances.png" alt="WeaverGrievances">
                     </div>
 
-                    <p>怨念编织者</p>
+                    <p>纠缠之怨</p>
                 </div>
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/SandDagger.html'">
