--- a/cn/weapon/WeaverGrievances.html
+++ b/cn/weapon/WeaverGrievances.html
@@ -37,9 +37,9 @@
         </aside>
 
         <main class="main-content">
-            <h1>怨念编织者</h1>
+            <h1>纠缠之怨</h1>
             <p> 
-                怨念编织者是一把月球领主后的近战武器，由噬魂幽花掉落物合成<br>
+                纠缠之怨是一把月球领主后的近战武器，由噬魂幽花掉落物合成<br>
                 左键发射六个冤灵之爪，短暂悬浮后飞回玩家所在位置，并穿透途径所有敌人<br>
                 剑身击中敌人时，会附加蓝焰灼烧效果<br>
                 右键进行翻滚，撞击途中的敌人，并在身后留下紫焰灼烧<br>
@@ -56,7 +56,7 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">怨念编织者</h1>
+            <h1 class="img-Item-Title">纠缠之怨</h1>
             <img src="WeaverGrievances.png" alt="WeaverGrievances">
             <p class="item-id">内部名: WeaverGrievances</p>
             <p class="item-property">基本属性</p>
