--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -326,6 +326,96 @@
 
                     <p>幽魂苦无</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/FocusingGrimoire.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/FocusingGrimoire.png" alt="FocusingGrimoire">
+                    </div>
+
+                    <p>聚能魔典</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/CommandersStaff.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/CommandersStaff.png" alt="CommandersStaff">
+                    </div>
+
+                    <p>统帅之杖</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/RaiderGun.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/RaiderGun.png" alt="RaiderGun">
+                    </div>
+
+                    <p>突袭者</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/HyperionBarrage.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/HyperionBarrage.png" alt="HyperionBarrage">
+                    </div>
+
+                    <p>海伯利昂自动炮</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/RaiderGunEX.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/RaiderGunEX.png" alt="RaiderGunEX">
+                    </div>
+
+                    <p>突袭者EX</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/CommandersChainsaw.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/CommandersChainsaw.png" alt="CommandersChainsaw">
+                    </div>
+
+                    <p>统帅链锯</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/GeminisTribute.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/GeminisTribute.png" alt="GeminisTribute">
+                    </div>
+
+                    <p>双生礼赞</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/Dicoria.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/Dicoria.png" alt="Dicoria">
+                    </div>
+
+                    <p>重瞳</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/GeminisTributeEX.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/GeminisTributeAltEX.png" alt="GeminisTributeAltEX">
+                    </div>
+
+                    <p>双生礼赞EX</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/DestroyersBlade.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/DestroyersBlade.png" alt="DestroyersBlade">
+                    </div>
+
+                    <p>毁灭者之刃</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/Observer.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/Observer.png" alt="Observer">
+                    </div>
+
+                    <p>观察者</p>
+                </div>
+
+
             </div>
 
             <div class="category-bar">
