--- a/cn/weapon/CommandersStaff.html
+++ b/cn/weapon/CommandersStaff.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大比目鱼炮-灾厄大修Wiki</title>
+    <title>示例武器介绍模板-灾厄大修Wiki</title>
     <link rel="icon" href="/asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,19 +37,16 @@
         </aside>
 
         <main class="main-content">
-            <h1>大比目鱼炮</h1>
+            <h1>统帅之杖</h1>
             <p> 
-                大比目鱼炮是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                统帅之杖是一把机械骷髅王后的法师武器，有25％的概率直接掉落于机械骷髅王<br>
+                发射一道热能分解射线穿透敌人<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神话</a>
             </p>
-            <img src="HalibutCannon.png" alt="HalibutCannon" class="pwertGIF" loading="lazy">
+            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki/Halibut_Cannon">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -57,18 +54,16 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">大比目鱼炮</h1>
-            <img src="HalibutCannon.png" alt="HalibutCannon">
-            <p class="item-id">内部名: 大比目鱼炮</p>
+            <h1 class="img-Item-Title">统帅之杖</h1>
+            <img src="CommandersStaff.png" alt="CommandersStaff">
+            <p class="item-id">内部名: CommandersStaff</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 82</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 62</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                "从那台机械的手臂上拆下来的，试试用灵能代替柴油供能?"
             </p>
         </div>        
     </div>
