--- a/cn/weapon/RaiderGunEX.html
+++ b/cn/weapon/RaiderGunEX.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大比目鱼炮-灾厄大修Wiki</title>
+    <title>示例武器介绍模板-灾厄大修Wiki</title>
     <link rel="icon" href="/asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,19 +37,17 @@
         </aside>
 
         <main class="main-content">
-            <h1>大比目鱼炮</h1>
+            <h1>突袭者EX</h1>
             <p> 
-                大比目鱼炮是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                突袭者EX是一把月球领主后的远程武器，是突袭者的上位合成<br>
+                将火枪子弹转化为高速子弹<br>
+                额外发射大量毁灭者归航弹<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="HalibutCannon.png" alt="HalibutCannon" class="pwertGIF" loading="lazy">
+            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki/Halibut_Cannon">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -57,18 +55,16 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">大比目鱼炮</h1>
-            <img src="HalibutCannon.png" alt="HalibutCannon">
-            <p class="item-id">内部名: 大比目鱼炮</p>
+            <h1 class="img-Item-Title">突袭者EX</h1>
+            <img src="RaiderGunEX.png" alt="RaiderGunEX">
+            <p class="item-id">内部名: RaiderGunEX</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 122</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 4</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                "狂轰滥炸"
             </p>
         </div>        
     </div>
