--- a/cn/weapon/HalibutCannon.html
+++ b/cn/weapon/HalibutCannon.html
@@ -39,14 +39,12 @@
         <main class="main-content">
             <h1>大比目鱼炮</h1>
             <p> 
-                大比目鱼炮是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                大比目鱼炮是一把传奇武器，在开启了传奇武器系统设置后可在任意水域钓鱼得到<br>
+                将火枪子弹转化为海洋弹<br>
+                它会随着游戏进度而逐渐强大，有1到15个等级<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="HalibutCannon.png" alt="HalibutCannon" class="pwertGIF" loading="lazy">
+            <img src="HalibutCannon.gif" alt="HalibutCannon" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Halibut_Cannon">查看原版信息</a>
@@ -59,17 +57,90 @@
         <div class="image-block">
             <h1 class="img-Item-Title">大比目鱼炮</h1>
             <img src="HalibutCannon.png" alt="HalibutCannon">
-            <p class="item-id">内部名: 大比目鱼炮</p>
+            <p class="item-id">内部名: HalibutCannon</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 40</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                "瞧瞧这只鱼，端着单片眼镜，头上戴着一顶高礼帽。你信不信它上过大学？"
+			"事实如此，先生，我可是海洋学与深渊植物学科的博士，曾在硫磺海大学钓鱼比赛中称霸两届。
+			这里的比目鱼，不但懂得海底奥秘，还能拿下海洋界的桂冠。"大比目鱼如是说道
             </p>
+
+            <h1 class="item-property">伤害成长曲线</h1>
+            <table class="item-description" border="1" style="border-collapse: collapse; width: 50%; text-align: center;">
+                <thead>
+                    <tr>
+                        <th>等级</th>
+                        <th>伤害值</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>7</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>8</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>13</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>18</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>22</td>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td>25</td>
+                    </tr>
+                    <tr>
+                        <td>12</td>
+                        <td>28</td>
+                    </tr>
+                    <tr>
+                        <td>13</td>
+                        <td>32</td>
+                    </tr>
+                    <tr>
+                        <td>14</td>
+                        <td>36</td>
+                    </tr>
+                    <tr>
+                        <td>15</td>
+                        <td>40</td>
+                    </tr>
+                </tbody>
+            </table>
+
         </div>        
     </div>
 
