--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -359,13 +359,13 @@
                     <p>海伯利昂自动炮</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/RaiderGunEX.html'">
+                <!--<div class="weapon-item" onclick="location.href='/cn/weapon/RaiderGunEX.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/RaiderGunEX.png" alt="RaiderGunEX">
                     </div>
 
                     <p>突袭者EX</p>
-                </div>
+                </div>-->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/CommandersChainsaw.html'">
                     <div class="image-container">
@@ -391,13 +391,13 @@
                     <p>重瞳</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/GeminisTributeEX.html'">
+                <!--<div class="weapon-item" onclick="location.href='/cn/weapon/GeminisTributeEX.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/GeminisTributeAltEX.png" alt="GeminisTributeAltEX">
                     </div>
 
                     <p>双生礼赞EX</p>
-                </div>
+                </div>-->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/DestroyersBlade.html'">
                     <div class="image-container">
@@ -407,13 +407,13 @@
                     <p>毁灭者之刃</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Observer.html'">
+                <!--<div class="weapon-item" onclick="location.href='/cn/weapon/Observer.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Observer.png" alt="Observer">
                     </div>
 
                     <p>观察者</p>
-                </div>
+                </div>-->
 
 
             </div>
