--- a/cn/weapon/CommandersChainsaw.html
+++ b/cn/weapon/CommandersChainsaw.html
@@ -43,7 +43,7 @@
                 击中目标时生成火花<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
+            <img src="CommandersChainsaw.gif" alt="CommandersChainsaw" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
