--- a/cn/weapon/DestroyersBlade.html
+++ b/cn/weapon/DestroyersBlade.html
@@ -43,7 +43,7 @@
                 左键发射过载毁灭者能量，命中敌人发射爆炸<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
+            <img src="DestroyersBlade.gif" alt="DestroyersBlade" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -63,9 +63,7 @@
             <p class="item-usetimer">使用时间: 16</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “蕴含着毁灭者强大的能量核心”
             </p>
         </div>        
     </div>
