--- a/cn/weapon/Dicoria.html
+++ b/cn/weapon/Dicoria.html
@@ -44,7 +44,7 @@
                 每六轮射击后，第七次射击会射出破坏死光瓦解敌人<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
+            <img src="Dicoria.gif" alt="Dicoria" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -64,9 +64,7 @@
             <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “话说我们这样会不会斗鸡眼”
             </p>
         </div>        
     </div>
