--- a/cn/weapon/FocusingGrimoire.html
+++ b/cn/weapon/FocusingGrimoire.html
@@ -44,7 +44,7 @@
 			    右键快速发射死亡射线<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神话</a>
             </p>
-            <img src="FocusingGrimoire.png" alt="FocusingGrimoire" class="pwertGIF" loading="lazy">
+            <img src="FocusingGrimoire.gif" alt="FocusingGrimoire" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
