--- a/cn/weapon/GeminisTribute.html
+++ b/cn/weapon/GeminisTribute.html
@@ -44,7 +44,7 @@
                 潜伏攻击命中目标会额外产生导弹追击敌人<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">化境</a>
             </p>
-            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
+            <img src="GeminisTribute.gif" alt="GeminisTribute" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -64,9 +64,7 @@
             <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “只能存在一个主人格，很明显是魔焰眼胜利了”
             </p>
         </div>        
     </div>
