--- a/cn/weapon/HyperionBarrage.html
+++ b/cn/weapon/HyperionBarrage.html
@@ -40,10 +40,10 @@
             <h1>海伯利昂自动炮</h1>
             <p> 
                 海伯利昂自动炮是一把机械骷髅王后的射手武器，有25％的概率直接掉落于机械骷髅王<br>
-                发射热射巡航弹<br>
+                发射热射巡航弹,每发射三发后，第四发会强化，额外射出两发热射巡航弹<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
+            <img src="HyperionBarrage.gif" alt="HyperionBarrage" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
