--- a/cn/weapon/RaiderGun.html
+++ b/cn/weapon/RaiderGun.html
@@ -45,7 +45,7 @@
 			    翻滚后的第一发子弹会被转化为毁灭者榴弹<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
+            <img src="RaiderGun.gif" alt="RaiderGun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
