--- a/cn/weapon/SHPC.html
+++ b/cn/weapon/SHPC.html
@@ -39,14 +39,12 @@
         <main class="main-content">
             <h1>SHPC</h1>
             <p> 
-                SHPC是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                SHPC是一把传奇武器，在开启了传奇武器系统设置后可在太空实验室获得<br>
+                左键发射高分子聚能炮，右键发射激光<br>
+                它会随着游戏进度而逐渐强大，有1到15个等级<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神话</a>
             </p>
-            <img src="SHPC.png" alt="SHPC" class="pwertGIF" loading="lazy">
+            <img src="SHPC.gif" alt="SHPC" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/SHPC">查看原版信息</a>
@@ -61,15 +59,86 @@
             <img src="SHPC.png" alt="SHPC">
             <p class="item-id">内部名: SHPC</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 1200</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 7</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “传奇的光辉已经暗淡...”
             </p>
+
+            <h1 class="item-property">伤害成长曲线</h1>
+            <table class="item-description" border="1" style="border-collapse: collapse; width: 50%; text-align: center;">
+                <thead>
+                    <tr>
+                        <th>等级</th>
+                        <th>伤害值</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>8</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>18</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>26</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>32</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>40</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>50</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>66</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>90</td>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td>130</td>
+                    </tr>
+                    <tr>
+                        <td>12</td>
+                        <td>160</td>
+                    </tr>
+                    <tr>
+                        <td>13</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>14</td>
+                        <td>320</td>
+                    </tr>
+                    <tr>
+                        <td>15</td>
+                        <td>1200</td>
+                    </tr>
+                </tbody>
+            </table>
+
         </div>        
     </div>
 
