--- a/cn/magazine/magazine.html
+++ b/cn/magazine/magazine.html
@@ -39,22 +39,85 @@
         <main class="main-content">
             <h1>弹匣机制</h1>
             <p>
+                枪械最原始的弹匣，无任何特殊附加效果，根据子弹效果来造成额外的效果
+                <div class="image-block">
+                    <h1 class="img-Item-Title">普通弹匣</h1>
+                    <img src="/asset/other/BulletCard.png" alt="BulletCard">
+                    <p class="item-description">
+                        具有子弹最朴实无华的美
+                    </p>
+                    <img src="/asset/other/BulletCard.gif" alt="BulletCard" class="pwertGIF" loading="lazy">
+                    <img src="/asset/other/Yeming BulletCard.gif" alt="Yeming BulletCard" class="pwertGIF" loading="lazy">
+                    <p class="item-description">
+                        “我，miss？这怎么可能？”
+                    </p>
+                </div>
+
+            弹药箱<br>
+            每个弹药箱都会带来各不相同的效果，为您的战斗增添一些强大的增益<br>
+            长按以部署，部署完成后手持枪械右击弹药箱，让特种弹药填充枪械弹匣<br>
+            特种子弹可以和原来的子弹效果叠加<br>
+                <div class="image-block">
+                    <h1 class="img-Item-Title">燃烧弹药箱</h1>
+                    <img src="/asset/other/BulletCard_napalmBomb.png" alt="BulletCard_napalmBomb">
+                    <p class="item-description">
+                        燃烧弹药箱是肉后可制作的补给箱，制作材料为1个弹药箱，50个空弹壳，5个活火块；<br>
+                        让弹头变得极度易燃，击中目标时发射爆燃，给你的敌人暖暖身子<br>
+                    </p>
+                    <img src="/asset/other/BulletCard_napalmBomb.gif" alt="BulletCard_napalmBomb" class="pwertGIF" loading="lazy">
+                    <img src="/asset/other/Yeming BulletCard_napalmBomb.gif" alt="Yeming BulletCard_napalmBomb" class="pwertGIF" loading="lazy">
+                    <p class="item-description">
+                        “这里不是cod”
+                    </p>
+                </div>
+
+                <div class="image-block">
+                    <h1 class="img-Item-Title">破甲弹药箱</h1>
+                    <img src="/asset/other/BulletCard_armourPiercer.png" alt="BulletCard_armourPiercer">
+                    <p class="item-description">
+                        破甲弹药箱是肉后可制作的补给箱，制作材料为1个弹药箱，50个空弹壳，2个钨钢金属废料，2个可疑镀层<br>
+                        给弹药镀上一层钨金，增加子弹的破甲能力，无视目标75％的护甲<br>
+                    </p>
+                    <img src="/asset/other/BulletCard_armourPiercer.gif" alt="BulletCard_armourPiercer" class="pwertGIF" loading="lazy">
+                    <img src="/asset/other/Yeming BulletCard_armourPiercer.gif" alt="BulletCard_armourPiercer" class="pwertGIF" loading="lazy">
+                    <p class="item-description">
+                        “即便如此，你仍旧不要尝试用手枪去击毁坦克”
+                    </p>
+                </div>
+
+                <div class="image-block">
+                    <h1 class="img-Item-Title">高爆弹药箱</h1>
+                    <img src="/asset/other/BulletCard_highExplosive.png" alt="BulletCard_highExplosive">
+                    <p class="item-description">
+                        高爆弹药箱是月后可制作的补给箱，制作材料为1个弹药箱，50个空弹壳，2个浊火精华<br>
+                        弹药将包含高爆炸药，击中目标时造成一次小型爆炸<br>
+                    </p>
+                    <img src="/asset/other/BulletCard_highExplosive.gif" alt="BulletCard_highExplosive" class="pwertGIF" loading="lazy">
+                    <img src="/asset/other/Yeming BulletCard_highExplosive.gif" alt="BulletCard_highExplosive" class="pwertGIF" loading="lazy">
+                    <p class="item-description">
+                        “把他们都炸上天！”
+                    </p>
+                </div>
+
+                <div class="image-block">
+                    <h1 class="img-Item-Title">龙息弹药箱</h1>
+                    <img src="/asset/other/BulletCard_dragonBreath.png" alt="BulletCard_dragonBreath">
+                    <p class="item-description">
+                        龙息弹药箱是月后可制作的补给箱，制作材料为1个弹药箱，50个空弹壳，2个龙魂碎片<br>
+                        魔法与科技的结合，子弹击中目标后会爆发出一道金属射流，对大范围的敌人造成杀伤<br>
+                    </p>
+                    <img src="/asset/other/BulletCard_dragonBreath.gif" alt="BulletCard_dragonBreath" class="pwertGIF" loading="lazy">
+                    <img src="/asset/other/Yeming BulletCard_dragonBreath.gif" alt="BulletCard_dragonBreath" class="pwertGIF" loading="lazy">
+                    <p class="item-description">
+                        “这是那条龙的唾液，你愿意相信吗？”
+                    </p>
+                </div>
+
+
             </p>
         </main>
 
-        <div class="image-block">
-            <h1 class="img-Item-Title">弹匣</h1>
-            <img src="/asset/other/GrenadeRound.png" alt="GrenadeRound">
-            <p class="item-description">
-                枪械如果想要开火，就需要先往弹匣里面装子弹
-            </p>
-            <h1 class="img-Item-Title">弹匣</h1>
-            <img src="/asset/other/GrenadeRound_armourPiercer.png" alt="GrenadeRound_armourPiercer">
-            <p class="item-description">
-                枪械如果想要开火，就需要先往弹匣里面装子弹
-            </p>
-            <img src="/cn/weapon/AbsoluteZero.gif" alt="AnarchyBlade" class="pwertGIF" loading="lazy">
-        </div>
+
     </div>
 
     <footer class="wiki-footer">
