--- a/cn/core/mechanism.html
+++ b/cn/core/mechanism.html
@@ -43,7 +43,7 @@
             <div class="weapon-grid">
                 <div class="weapon-item" onclick="location.href='/cn/magazine/magazine.html'">
                     <div class="image-container">
-                        <img src="/asset/other/GrenadeRound.png" alt="GrenadeRound">
+                        <img src="/asset/other/BulletCard.png" alt="BulletCard">
                     </div>
 
                     <p>弹匣机制</p>
