--- a/cn/weapon/Flintlockpistol.html
+++ b/cn/weapon/Flintlockpistol.html
@@ -39,12 +39,12 @@
         <main class="main-content">
             <h1>燧发枪</h1>
             <p> 
-                燧发枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                燧发枪是一把困难模式前的枪类武器，从军火商处购买。<br>
+                燧发枪是一把没有弹匣，无需换弹装填的原版武器。<br>
+                它不会造成任何击退，没有任何上级物品可以合成。<br>
+                低价售卖于军火商处使得它在游戏初期就能使用，连发无需装填的特性为开荒提供了较好的火力保障。<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="Flintlockpistol.png" alt="Flintlockpistol" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +61,13 @@
             <img src="Flintlockpistol.png" alt="Flintlockpistol">
             <p class="item-id">内部名: Flintlockpistol</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 13</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “相信古人的智慧”<br>
+                
             </p>
         </div>        
     </div>
