--- a/cn/weapon/Musket.html
+++ b/cn/weapon/Musket.html
@@ -39,12 +39,13 @@
         <main class="main-content">
             <h1>火枪</h1>
             <p> 
-                火枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                火枪是一把困难模式前的枪类武器，敲碎暗影珠掉落<br>
+                腐化世界第一个被敲碎的暗影珠必然掉落火枪，以及火枪子弹。<br>
+                拥有较高的单发伤害，也许搭配提升暴击率的装备更为合适。<br>
+                与猩红之地的夺命枪对应，可在微光中互相转化。<br>
+                没有弹匣，无需换弹。单发栓动枪，一发一换弹，它同样有着自己的传奇往事。<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="Musket.png" alt="Musket" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +62,13 @@
             <img src="Musket.png" alt="Musket">
             <p class="item-id">内部名: Musket</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 50</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 60</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “民兵说，我必须做好准备”<br>
+                
             </p>
         </div>        
     </div>
