--- a/cn/weapon/RedRyder.html
+++ b/cn/weapon/RedRyder.html
@@ -39,12 +39,10 @@
         <main class="main-content">
             <h1>红莱德枪</h1>
             <p> 
-                红莱德枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                红莱德枪是一把困难模式前的枪类武器，通过打开圣诞节的礼物掉落<br>
+                没有弹匣，无需换弹。但射速极慢，又有与射速不匹配的基础伤害。<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="RedRyder.png" alt="RedRyder" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +59,13 @@
             <img src="RedRyder.png" alt="RedRyder">
             <p class="item-id">内部名: RedRyder</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 24</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 60</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “别把自己的眼球射出来了！”<br>
+                
             </p>
         </div>        
     </div>
