--- a/cn/weapon/TheUndertaker.html
+++ b/cn/weapon/TheUndertaker.html
@@ -39,12 +39,12 @@
         <main class="main-content">
             <h1>夺命枪</h1>
             <p> 
-                夺命枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                夺命枪是一把困难模式前的枪类武器，敲碎猩红之心掉落<br>
+                敲碎第一个猩红之心必定掉落夺命枪。<br>
+                拥有左轮手枪系列的六发弹匣，以及转枪换弹的帅气动作。<br>
+                对应腐化之地的火枪，可在微光中互相转化。<br>
+                “左轮手枪的全面降级版本”<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="TheUndertaker.png" alt="TheUndertaker" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +61,13 @@
             <img src="TheUndertaker.png" alt="TheUndertaker">
             <p class="item-id">内部名: TheUndertaker</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 16</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 12</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “当入殓师发现他们的客户不配合时，他们往往会使用这个让他们安静下来”<br>
+                
             </p>
         </div>        
     </div>
